<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login">login</string>
    <string name="loginName">login name</string>
    <string name="password">password</string>
    <string name="RadioButton">RadioButton</string>
    <string name="dialog_message">Finish Activity</string>
    <string name="dialog_title">Finish ListItemActivity</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="chatButton">Start Chat!</string>
    <string name="sendButton">SEND</string>
    <string name="weatherButton">weather Button</string>
    <string name="minTemp">MinTemp</string>
    <string name="maxTemp">MaxTemp</string>
    <string name="windSpeed">WindSpeed</string>
    <string name="currentTemp">currentTemp</string>
    <string name="progressBar">Progress Bar</string>
    <string name="textFragment1">MessageHere</string>
    <string name="textFragment2">ID=</string>
    <string name="buttonFragment">DELETE THIS MESSAGE</string>
</resources>
