<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.areumcho.androidlabs.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="278dp" />

    <Button
        android:id="@+id/chatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chatButton"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="343dp" />

    <Button
        android:id="@+id/weatherButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherButton"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="83dp" />

</LinearLayout>
